--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="login">
-      <form class="responsive" action="/users/login" method="POST">
+      <form class="responsive" action="/" method="POST">
         <% if(message.length > 0 ) { %>
           <div class="alert alert-danger alert-dismissible deposit-alert" role="alert" style="margin-top: 5px;">
               <%= message %>
