--- a/views/user.ejs
+++ b/views/user.ejs
@@ -45,7 +45,7 @@
           <div class="registrationFormAlert" id="divCheckPasswordMatch"></div>
         </div>
         <button name="btn-create" id="submit" class="btn btn-primary">CREATE ACCOUNT</button>
-        <p style="text-align: center; margin-top: 10px;">Already have an account? <a href="/users/login">Sign In</a>
+        <p style="text-align: center; margin-top: 10px;">Already have an account? <a href="/">Sign In</a>
         </p>
       </form>
     </div>
